components/policies/development/kueue/no-skip/.chainsaw-test/chainsaw-assert-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: no-skip.kueue.konflux-ci.dev
status:
  observedGeneration: 1
  typeChecking: {}
