components/policies/development/kueue/no-skip/.chainsaw-test/test-outside-tenant/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: outside-tenant-create-valid-taskrun
spec:
  description: |
    creates a TaskRun with a PLATFORM parameter and a corresponding
    tekton-kueue's annotation in a non-tenant namespace
  concurrent: false
  steps:
  - name: given-taskruns-crd-exists
    try:
    - apply:
        file: ../resources/taksruns.tekton.dev_clusterresourcedefinition.yaml
    - assert:
        file: ../chainsaw-assert-taskruns-crd.yaml
  - name: given-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../no-skip-validationadmissionpolicy.yaml
    - apply:
        file: ../../no-skip-validationadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
  - name: then-valid-taskrun-can-be-created
    try:
    - create:
        file: ../resources/taskrun_valid.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: outside-tenant-create-valid-taskrun-complex-platform
spec:
  description: |
    creates a TaskRun with a complex PLATFORM parameter and a corresponding
    tekton-kueue's annotation in a non-tenant namespace
  concurrent: false
  steps:
  - name: given-taskruns-crd-exists
    try:
    - apply:
        file: ../resources/taksruns.tekton.dev_clusterresourcedefinition.yaml
    - assert:
        file: ../chainsaw-assert-taskruns-crd.yaml
  - name: given-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../no-skip-validationadmissionpolicy.yaml
    - apply:
        file: ../../no-skip-validationadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
  - name: then-valid-taskrun-can-be-created
    try:
    - create:
        file: ../resources/taskrun_valid_complex.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: outside-tenant-create-skipped-taskrun
spec:
  description: |
    creates a TaskRun with no PLATFORM parameter and no corresponding
    tekton-kueue's annotation in a non-tenant namespace
  concurrent: false
  steps:
  - name: given-taskruns-crd-exists
    try:
    - apply:
        file: ../resources/taksruns.tekton.dev_clusterresourcedefinition.yaml
    - assert:
        file: ../chainsaw-assert-taskruns-crd.yaml
  - name: given-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../no-skip-validationadmissionpolicy.yaml
    - apply:
        file: ../../no-skip-validationadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
  - name: then-skipped-taskrun-can-be-created
    try:
    - create:
        file: ../resources/taskrun_skipped.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: outside-tenant-create-invalid-wrong-annotation-taskrun
spec:
  description: |
    creates a TaskRun with a PLATFORM parameter and
    a wrong corresponding tekton-kueue's annotation
    in a non-tenant namespace
  concurrent: false
  steps:
  - name: given-taskruns-crd-exists
    try:
    - apply:
        file: ../resources/taksruns.tekton.dev_clusterresourcedefinition.yaml
    - assert:
        file: ../chainsaw-assert-taskruns-crd.yaml
  - name: given-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../no-skip-validationadmissionpolicy.yaml
    - apply:
        file: ../../no-skip-validationadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
  - name: then-invalid-taskrun-can-be-created
    try:
    - create:
        file: ../resources/taskrun_invalid_wrong_annotation.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: outside-tenant-create-invalid-no-annotations-taskrun
spec:
  description: |
    creates a TaskRun with a PLATFORM parameter and no
    corresponding tekton-kueue's annotation in a
    non-tenant namespace
  concurrent: false
  steps:
  - name: given-taskruns-crd-exists
    try:
    - apply:
        file: ../resources/taksruns.tekton.dev_clusterresourcedefinition.yaml
    - assert:
        file: ../chainsaw-assert-taskruns-crd.yaml
  - name: given-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../no-skip-validationadmissionpolicy.yaml
    - apply:
        file: ../../no-skip-validationadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
  - name: then-invalid-taskrun-is-created
    try:
    - create:
        file: ../resources/taskrun_invalid_no_annotation.yaml
